--- a/src/app/shared/banner/banner.component.html
+++ b/src/app/shared/banner/banner.component.html
@@ -1,1 +1,3 @@
-<p>banner works!</p>
+<figure class="banner">
+  <img src="../../../assets/imagens/banner-homepage.png" alt="Banner da página da jornada">
+</figure>
