--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,12 @@
 <app-banner/>
 <app-container>
-  <h1>Hello</h1>
+  <h1>Promoções</h1>
+  <div class="wrap-card">
+    <app-card-busca/>
+    <app-card-busca/>
+    <app-card-busca/>
+    <app-card-busca/>
+    <app-card-busca/>
+    <app-card-busca/>
+  </div>
 </app-container>
