--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,22 @@
-<p>footer works!</p>
+<footer>
+  <app-container>
+    <div class="inner">
+      <div class="left">
+        <img src="../../../assets/imagens/logo-com-tagline.png" alt="Logo da jornada no footer">
+        <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
+        <p>Desenvolvido por Mauro. Projeto fictício sem fins comerciais.</p>
+      </div>
+
+      <div class="right">
+        <p>Acesse nossas redes:</p>
+        <ul>
+          <li>
+            <img src="../../../assets/icones/whatsapp.png" alt="Whatsapp">
+          </li>
+          <li><img src="../../../assets/icones/instagram.png" alt=""></li>
+          <li><img src="../../../assets/icones/twitter.png" alt=""></li>
+        </ul>
+      </div>
+    </div>
+  </app-container>
+</footer>
