Card de depoimento completo

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,4 +9,12 @@
     <app-card-busca/>
     <app-card-busca/>
   </div>
+
+  <h1>Depoimentos</h1>
+  <div class="depoimento-card">
+    <app-card-depoimento/>
+    <app-card-depoimento/>
+    <app-card-depoimento/>
+  </div>
+
 </app-container>
