--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -10,5 +10,10 @@ h1{
   font-weight: normal;
   font-size: 32px;
   line-height: 40px;
+  margin-bottom: 20px;
+}
 
+.depoimento-card {
+  display: flex;
+  gap: 1.5rem;
 }
