--- a/src/app/shared/card-depoimento/card-depoimento.component.html
+++ b/src/app/shared/card-depoimento/card-depoimento.component.html
@@ -1,7 +1,12 @@
-<div class="depoimento">
-  <img src="assets/imagens/avatar3.png" alt="">
-  <div class="avis">
-    <p style="color: #49454F;">A jornada foi uma das melhores agências de viagens que eu já experimentei. O serviço ao cliente foi excepcional, e toda a equipe foi muito atenciosa e prestativa.</p>
-    <span style="font-weight: 500; color: #1D1B20;">Mariana Matos</span>
-  </div>
-</div>
+<mat-card class="depoimento">
+  <mat-card-content>
+    <img src="assets/imagens/avatar3.png" alt="Avatar da pessoa autora do depoimento">
+    <ul>
+      <li>{{ depoimento }}</li>
+      <li>
+        <strong>{{ autoria }}</strong>
+      </li>
+    </ul>
+  </mat-card-content>
+</mat-card>
+
