--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,23 +1,23 @@
-<app-banner/>
-<app-container>
-
-  <app-form-busca/>
-
-  <h1>Promoções</h1>
-  <div class="wrap-card">
-    <app-card-busca/>
-    <app-card-busca/>
-    <app-card-busca/>
-    <app-card-busca/>
-    <app-card-busca/>
-    <app-card-busca/>
-  </div>
-
-  <h1>Depoimentos</h1>
-  <div class="depoimento-card">
-    <app-card-depoimento/>
-    <app-card-depoimento/>
-    <app-card-depoimento/>
-  </div>
-
-</app-container>
+<section class="homepage">
+  <app-banner
+    src="assets/imagens/banner-homepage.png"
+    alt="Banner da aplicação Jornada"
+  ></app-banner>
+  <app-container>
+    <app-form-busca></app-form-busca>
+    <h2>Promoções</h2>
+    <div class="card-wrapper">
+      <app-card-busca *ngFor="let promocao of listaPromocoes" [promo]="promocao"></app-card-busca>
+    </div>
+    <h2>Depoimentos</h2>
+    <div class="card-wrapper">
+      <app-card-depoimento></app-card-depoimento>
+      <app-card-depoimento></app-card-depoimento>
+      <app-card-depoimento></app-card-depoimento>
+    </div>
+  </app-container>
+  <app-banner
+    src="assets/imagens/banner-homepage-rodape.png"
+    alt="Banner da aplicação Jornada"
+  ></app-banner>
+</section>
