--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,22 +1,32 @@
-<footer>
+<footer class="app-footer">
   <app-container>
     <div class="inner">
-      <div class="left">
-        <img src="../../../assets/imagens/logo-com-tagline.png" alt="Logo da jornada no footer">
-        <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
-        <p>Desenvolvido por Mauro. Projeto fictício sem fins comerciais.</p>
-      </div>
-
-      <div class="right">
-        <p>Acesse nossas redes:</p>
-        <ul>
-          <li>
-            <img src="../../../assets/icones/whatsapp.png" alt="Whatsapp">
-          </li>
-          <li><img src="../../../assets/icones/instagram.png" alt=""></li>
-          <li><img src="../../../assets/icones/twitter.png" alt=""></li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          <img src="assets/imagens/logo-com-tagline.png" alt="">
+        </li>
+        <li>
+          Horário de atendimento: 08h - 20h (Segunda a Sábado)
+        </li>
+        <li>
+          Desenvolvido por Alura. Projeto fictício sem fins comerciais
+        </li>
+      </ul>
+      <ul class="socials">
+        <li>Acesse nossas redes:</li>
+        <li>
+          <button mat-icon-button>
+            <img src="assets/icones/whatsapp.png" alt="Ícone do whatsapp">
+          </button>
+          <button mat-icon-button>
+            <img src="assets/icones/instagram.png" alt="Ícone do instagram">
+          </button>
+          <button mat-icon-button>
+            <img src="assets/icones/twitter.png" alt="Ícone do twitter">
+          </button>
+        </li>
+      </ul>
     </div>
   </app-container>
 </footer>
+
