--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,45 +1,23 @@
-footer {
+.app-footer {
   background-color: black;
   color: white;
-  padding-block: 2rem;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-
   .inner {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-
-    .left {
-      padding-block: 1rem;
-      img {
-        /* width: 10rem;
-        margin-bottom: 1rem; */
-        max-width: 100%;
-        max-height: 40px;
-        margin-bottom: 1rem;
-      }
-      p {
-        margin-bottom: .5rem;
-      }
+    align-items: center;
+    img {
+      max-width: 100%;
+      max-height: 40px;
     }
-
-    .right {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-
-      ul{
-        display: flex;
-        align-items: center;
-        gap: .5rem;
-        padding: 0;
-
-        li{
-          list-style: none;
+    ul {
+      padding: 0;
+      list-style: none;
+      &.socials {
+        li {
+          text-align: center;
         }
       }
     }
