--- a/src/app/shared/card-depoimento/card-depoimento.component.html
+++ b/src/app/shared/card-depoimento/card-depoimento.component.html
@@ -1,10 +1,10 @@
 <mat-card class="depoimento">
   <mat-card-content>
-    <img src="assets/imagens/avatar3.png" alt="Avatar da pessoa autora do depoimento">
+    <img src="{{depoimento.avatar}}" alt="Avatar da pessoa autora do depoimento">
     <ul>
-      <li>{{ depoimento }}</li>
+      <li>{{ depoimento.texto }}</li>
       <li>
-        <strong>{{ autoria }}</strong>
+        <strong>{{ depoimento.autor }}</strong>
       </li>
     </ul>
   </mat-card-content>
