--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -2,39 +2,25 @@
   <h1 mat-dialog-title>Viajante</h1>
   <div mat-dialog-content>
     <div class="selecao-idade">
-      <ul>
-        <li><strong>Adultos</strong></li>
-        <li>(Acima de 12 anos)</li>
-        <li>
-          <app-botao-controle operacao="decrementar"></app-botao-controle>
-          <span>1</span>
-          <app-botao-controle operacao="incrementar"></app-botao-controle>
-        </li>
-      </ul>
-      <ul>
-        <li><strong>Crianças</strong></li>
-        <li>(Entre 2 e 11 anos)</li>
-        <li>
-          <app-botao-controle operacao="decrementar"></app-botao-controle>
-          <span>1</span>
-          <app-botao-controle operacao="incrementar"></app-botao-controle>
-        </li>
-      </ul>
-      <ul>
-        <li><strong>Bebês</strong></li>
-        <li>(Até 2 anos)</li>
-        <li>
-          <app-botao-controle operacao="decrementar"></app-botao-controle>
-          <span>1</span>
-          <app-botao-controle operacao="incrementar"></app-botao-controle>
-        </li>
-      </ul>
+      <app-selector-passageiro titulo="Adultos" subtitulo="(Acima de 12 anos)" [formControl]="formService.obterControle('adulto')"/>
+      <app-selector-passageiro titulo="Crianças" subtitulo="(Entre 2 e 11 anos)" [formControl]="formService.obterControle('crianca')"/>
+      <app-selector-passageiro titulo="Bebês" subtitulo="(Até 2 anos)" [formControl]="formService.obterControle('baby')"/>
     </div>
     <div class="selecao-categoria">
       <p><strong>Categoria</strong></p>
       <mat-chip-listbox aria-label="Seleção de passagens">
-        <mat-chip-option selected>1 adulto</mat-chip-option>
-        <mat-chip-option>Econômica</mat-chip-option>
+        <mat-chip-option
+          value="Econômica"
+          [selected]="formService.formBusca.get('tipo')?.value === 'Econômica'"
+          (selectionChange)="formService.alterarTipo($event, 'Econômica')"
+        >Econômica
+        </mat-chip-option>
+        <mat-chip-option
+          value="Executiva"
+          [selected]="formService.formBusca.get('tipo')?.value === 'Executiva'"
+          (selectionChange)="formService.alterarTipo($event, 'Executiva')"
+        >Executiva
+        </mat-chip-option>
       </mat-chip-listbox>
     </div>
   </div>
