--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -13,19 +13,21 @@
       <mat-card-header>
         <mat-card-title> Login </mat-card-title>
       </mat-card-header>
-      <form>
+      <form [formGroup]="loginForm">
         <mat-card-content>
           <mat-form-field appearance="outline">
             <mat-label>Email</mat-label>
-            <input matInput type="email" placeholder="Digite o seu e-email"/>
+            <mat-error *ngIf="loginForm.get('email')?.errors?.['required']">Email é obrigatório</mat-error>
+            <mat-error *ngIf="loginForm.get('email')?.errors?.['email']">O email não respeita o formato</mat-error>
+            <input matInput type="email" placeholder="Digite o seu e-email" formControlName="email"/>
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
-            <input matInput type="password" placeholder="Digite sua senha"/>
+            <input matInput type="password" placeholder="Digite sua senha" formControlName="senha"/>
           </mat-form-field>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-flat-button color="primary">ACESSAR MINHA CONTA</button>
+          <button mat-flat-button color="primary" [disabled]="!loginForm.valid" (click)="login()">ACESSAR MINHA CONTA</button>
         </mat-card-actions>
         <p>Ainda não possui sua conta? <a href=""><strong><u>Clique aqui para se cadastrar!</u></strong></a> </p>
       </form>
