--- a/src/app/shared/dropdown-uf/dropdown-uf.component.html
+++ b/src/app/shared/dropdown-uf/dropdown-uf.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="input-container" appearance="outline">
   <mat-label> {{ label }} </mat-label>
-  <mat-icon matPrefix> {{ iconePrefix }} </mat-icon>
+  <mat-icon matPrefix *ngIf="iconePrefix"> {{ iconePrefix }} </mat-icon>
   <input matInput [matAutocomplete]="auto" [formControl]="control"/>
   <mat-icon matSuffix>search</mat-icon>
 </mat-form-field>
