--- a/src/app/shared/form-base/form-base.component.html
+++ b/src/app/shared/form-base/form-base.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <form [formGroup]="cadastroForm">
       <mat-card-title>
-        Crie sua conta
+        {{ title }}
       </mat-card-title>
       <section *ngIf="profilComponent">
         <div class="acoesPerfil">
@@ -105,16 +105,17 @@
           </div>
         </div>
 
-        <mat-checkbox formControlName="aceitarTermos" color="primary" class="full-width">Li e aceito os termos e condições deste cadastro *</mat-checkbox>
+        <mat-checkbox *ngIf="!profilComponent" formControlName="aceitarTermos" color="primary" class="full-width">Li e aceito os termos e condições deste cadastro *</mat-checkbox>
         <mat-error *ngIf="cadastroForm.get('aceitarTermos')?.invalid && cadastroForm.get('aceitarTermos')?.dirty">
           Você precisa aceitar os termos e condições para efetuar o cadastro
         </mat-error>
       </mat-card-content>
       <mat-card-actions class="full-width">
         <button mat-flat-button
+          [class.perfil-button]="profilComponent"
           (click)="cadastrar()"
           color="primary"
-        >CADASTRAR
+        > {{ btnText }}
         </button>
       </mat-card-actions>
     </form>
